--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <a href="#faseEen">Fase 1</a>
                 <a href="#faseTwee">Fase 2</a>
                 <a href="#">Fase 3</a>
+                <a href="#sectieReflectie">Reflectie</a>
             </div>
         </div>
        <img src="IMG\Mask Group 1.png" id="heroImg">
@@ -33,12 +34,14 @@
         <p>Ik ben Mike van Tienoven 3e jaars media student op Fontys Hogeschool. In dit 
             portfolio laat ik zien welke producten/Proof of Concepts ik heb gemaakt voor mijn stage om mijn onderzoeksvragen
             te beantwoorden in opdracht van Dutch Rose Media.
-            De leeswijzer zal een beknopte process bewchrijving zijn die ik heb opgedeeld in Fases, verder zal alles 
+            De leeswijzer zal een beknopte process beschrijving zijn die ik heb opgedeeld in Fases, verder zal alles 
             gelinkt zijn aan de desbetreffende producten.</p><br>
         <h2>Leeswijzer</h2><br>
         <p>Dit portfolio bestaat uit 3 Fases. In fase 1 heb ik me gefocust op de preproductie en heb ik me
             bezig gehouden met storyboarding. In fase 2 heb ik onderzoek gedaan naar game engines en 3D software.
-            In fase 3 ben ik hier mee verder gegaan. 
+            In fase 3 heb ik mijn onderzoek en POC's uit fase 1 en 2, gevalideerd door het gehele proces te doorlopen zoals 
+            die in mijn onderzoek als beste naar voren is gekomen, verder heb ik gewerkt aan het beantwoorden van mijn Hoofdvraag
+            en een advies opgestelt voor Dutch Rose Media. 
             </p>
     </div>
 </div>
@@ -88,16 +91,16 @@
                     Hierdoor had ik gelijk in het begin al een goed beeld van wie ik kon benaderen voor verschillende vragen over verschillende onderwerpen.
                      Om de opdracht, de stakeholders en de planning goed in kaart te brengen heb ik een <a href="./projectplan.html">projectplan</a> gemaakt,
                       de feedback hierop was dat ik binnen mijn fases gebruik moest maken van sprints zodat ik tussentijds mijn gemaakte werk kon valideren. 
-                      Door middel van een bieb onderzoek ben ik meer te weten gekomen over <icon><img src="./IMG/cmd bril.png" width="2.5%" alt=""></icon> <a href="./watIsVolumetricVideo.html">volumetric video</a>, 
-                      ik heb hierin gekeken naar: de geschiedenis, hoe het werkt, <icon><img src="./IMG/cmd showroom.png" width="2.5%" alt=""></icon> en de technologie vergeleken met regulier CGI. 
+                      Door middel van een bieb onderzoek ben ik meer te weten gekomen over <a href="./watIsVolumetricVideo.html">volumetric video</a>, 
+                      ik heb hierin gekeken naar: de geschiedenis, hoe het werkt, en de technologie vergeleken met regulier CGI. 
                       In grote lijnen kwam hieruit dat volumetric video kwalitatief nog niet kan tippen aan CGI maar, 
                       dat het in productie tijd een verre voorsprong heeft op CGI.<br><br>
                       Ik wilde weten hoe de bewerking van volumetric video in zijn werk ging, 
-                      dus heb ik een <icon><img src="./IMG/cmd bril.png" width="2.5%" alt=""></icon> <a href="#">interview</a> afgelegd met Lisa (4DR Studios) producer om hierover meer te weten te komen.     
-                      Om meer te weten te komen over <icon><img src="./IMG/cmd bril.png" width="2.5%" alt=""></icon> <a href="#">storyboarden</a> heb ik bieb onderzoek gedaan naar verschillende technieken, 
+                      dus heb ik een <a href="#">interview</a> afgelegd met Lisa (4DR Studios) producer om hierover meer te weten te komen.     
+                      Om meer te weten te komen over <a href="#">storyboarden</a> heb ik een literature study gedaan naar verschillende technieken, 
                       ook heb ik gekeken naar potentieel handige programma’s hiervoor en deze met elkaar vergeleken. 
                       In dit onderzoek heb ik ook A/B testen toegepast, doordat ik met een aantal van deze programma’s heb gewerkt
-                       en deze op een aantal punten met elkaar heb <icon><img src="./IMG/cmd bril.png" width="2.5%" alt=""></icon> <a href="#">vergeleken</a>. Ik heb voor dit onderzoek ook een <icon><img src="./IMG/cmd bril.png" width="2.5%" alt=""></icon> <a href="#">expert</a> geraadpleegd
+                       en deze op een aantal punten met elkaar heb <a href="#">vergeleken</a>. Ik heb voor dit onderzoek ook een <a href="#">expert</a> geraadpleegd
                         namelijk: Gert Jan Booy (regisseur van Studio100) die vertelde mij dat hij weinig tijd heeft om daadwerkelijk 
                         heel omslachtig te storyboarden, dus zijn grootste eis is dat het snel en makkelijk te leren is, 
                         dit heb ik meegenomen in mijn uiteindelijke <a href="#">conclusie</a> van het onderzoek, 
@@ -107,8 +110,8 @@
                           De feedback hierop was erg positief en de vervolg vragen vanuit Dutch Rose Media gingen voornamelijk over bepaalde 
                           functies die het programma zou moeten bevatten. Daarnaast werd mij gevraagd of het mogelijk was om de volumetric studio 
                           na te maken op <a href="#">schaal in FrameForge</a>, dit zou namelijk handig zijn omdat klanten vaak niet doorhebben hoe weinig opneembare 
-                          ruimte hebt in de studio, zo zou je in de toekomst kunnen voorkomen dat je voor verassingen komt te staan. 
-                          Ik heb alle onderzoeken ook nog gebundeld in één groot <icon><img src="./IMG/cmd bril.png" width="2.5%" alt=""></icon> <a href="#">onderzoek document</a>.    
+                          ruimte hebt in de studio, zo zou je in de toekomst kunnen voorkomen dat je voor verrassingen komt te staan. 
+                          Ik heb alle onderzoeken ook nog gebundeld in één groot <a href="#">onderzoek document</a>.    
                 </p><br>     
             </div>
         </div>
@@ -121,7 +124,7 @@
                 <h2>Fase 2</h2><br>
                 <p>
                     Ik wilde meer weten over de post productie van volumetric video om deze hologrammen 
-                    in een andere omgeving te plaatsen, dus heb ik een <icon><img src="./IMG/cmd bril.png" width="2.5%" alt=""></icon> <a href="./interviewGuy.html">interview</a> gehouden met Guy Meel 
+                    in een andere omgeving te plaatsen, dus heb ik een <a href="./interviewGuy.html">interview</a> gehouden met Guy Meel 
                     (Pluspuntproductie verantwoordelijk voor de skate scene van gamekeepers) hierin was uitgekomen dat hij gebruik maakte van Unreal Engine. 
                     Hij vertelde mij dat Unreal niet gemakkelijk werkte met volumetric video, 
                     omdat je in de viewport de volumetric alleen statisch kon bekijken, 
@@ -129,16 +132,16 @@
 
                     Om meer te weten te komen over werken met een game engine ben ik begonnen aan een project in Unity. 
                     Ik heb gekozen voor unity, omdat ik in het begin van fase 1 heb vernomen dat de expertise van de werknemers bij Unity ligt. 
-                    Zo kan ik makkelijk bij iemand terecht voor vragen. Om meer te weten te komen over hoe Unity werkt heb ik een <a href="./unityBospad.html">berg omgeving</a> gemaakt, 
-                    met bomen en gras. Ik heb hierdoor geleerd hoe je assets moet toevoegen op Unity, deze importeren en vervolgens te gebruiken. 
-                    Om meer te weten te komen over animeren in Unity heb ik een <a href="./ironManScene.html">video</a> gemaakt waarin een figuur in de lucht vliegt en vervolgens wegduikt voor straaljagers 
+                    Zo kan ik makkelijk bij iemand terecht voor vragen. Ik heb een <a href="./unityBospad.html">berg omgeving</a> gemaakt in unity zodat ik meer te weten
+                    komen zou over de basis van het programma. Ik heb hierdoor geleerd hoe je assets moet toevoegen op Unity, deze importeren en vervolgens te gebruiken. 
+                    Daarna ben ik aan de slag gegaanover animeren in Unity heb ik een <a href="./ironManScene.html">video</a> gemaakt waarin een figuur in de lucht vliegt en vervolgens wegduikt voor straaljagers 
                     (inspiratie van Iron Man, 2008) hierin heb ik geleerd om met een timeline en keyframes te werken ook heb ik geleerd hoe je de skybox aan kunt passen 
                     (lucht omgeving veranderd naar omgeving met wolken). Het exporteren van deze video bleek echter vrij ingewikkeld, omdat de timeline meer bedoelt is voor een ‘cutscene’ tussen gameplay door.<br><br>
                     
-                    <b>Conclusie sprint 1:</b><p>Na uitgebreid onderzoek ben ik tot de conclusie gekomen dat game engines niet geschikt zijn in de scope film en televisie, in de volgende sprint ga ik naar opties kijken buiten het gebied game engines.</p><br><br>
+                    <b>Conclusie sprint 1:</b><p>Op basis van mijn Proof of Concepts en een Expert interview met Swen Rooijakkers ben ik tot de conclusie gekomen dat game engines niet geschikt zijn in de scope film en televisie, in de volgende sprint ga ik naar opties kijken buiten het gebied game engines.</p><br><br>
 
-                    In sprint 2 ben ik na een <icon><img src="./IMG/cmd bril.png" width="2.5%" alt=""></icon> <a href="#">interview</a> met Swen Rooijakkers overgestapt op Blender, omdat dit beter aansluit bij de scope film en televisie. 
-                    Ik wilde meer weten over dit programma dus heb ik <icon><img src="./IMG/cmd bril.png" width="2.5%" alt=""></icon> <a href="#">literature study</a> gedaan naar Blender. 
+                    In sprint 2 ben ik na een <a href="#">interview</a> met Swen Rooijakkers overgestapt op Blender, omdat dit beter aansluit bij de scope film en televisie. 
+                    Ik wilde meer weten over dit programma dus heb ik <a href="#">literature study</a> gedaan naar Blender. 
                     Om meer ‘hands on’ kennis te vergaren over Blender heb ik <a href="#">een donut</a> gemaakt in blender, 
                     hiermee heb ik de basics geleerd zoals: vertices (punten in 3D objecten waar hoeken of lijnen samen komen), 
                     keybindings en geometry nodes.<br><br> 
@@ -166,15 +169,14 @@
         <div id="productensctn">
             <div class="container">
                 <h1>Producten</h1><br>
-                <h2>Learning goals</h2><br>     
-                <p><b>Analise</b></p><br>
+                <h2>Leer uitkomsten</h2><br>     
+                <p><b>Analyse</b></p><br>
+                <a href="./projectplan.html">projectplan</a>
                  <a href="./watIsVolumetricVideo.html"><p>Wat is volumetric video?</p></a>
                  <a href="./waaromIsVolumetricBeter.html"><p>waarom is volumetric video beter dan regulier CGI?</p></a>
                  <a href="./isFrameForgeGeschikt.html"><p>is frameforge geschikt om 3D scenes te storyboarden?</p></a>
                  <a href="./interviewGuy.html"><p>interview met Guy Meel over Gamekeepers scene</p></a>
                  <a href="./interviewGertJan.html"><p>interview met Gert Jan Booy over storyboarding</p></a>
-                <p>Opdracht omschrijving?</p>
-                 <p>welke software is het meest geschikt om beelden te creeeren met volumetric video?</p><br>
                 <p><b>Advies</b></p><br>
                   <a href="./conclusieStoryboarding.html"><p>conclusie storyboarding</p></a>
                  <a href="./conclusiePostproductie.html"><p>conclusie beste software post productie...</p></a><br>
@@ -183,22 +185,32 @@
                  <a href="./ironManScene.html"><p>unity flying animation</p></a>
                  <a href="./blenderKubus.html"><p>Blender kubus camera animatie</p></a>
                  <a href="./blenderanimatie.html"><p>Blender Volumetric dans camera animatie</p></a><br>
-
                 <p><b>Realisatie</b></p><br>
 
                 
                 <p><b>Management & controle</b></p><br>
-
-
-                <p><b>Judgement</b></p><br>
+                <a href="./projectplan.html">projectplan</a>
+                <br><br>
+                <p><b>Beoordeelsvorming</b></p><br>
 
 
                 <p><b>Communicatie</b></p><br>
 
 
-                <p><b>Learning ability</b></p><br>
+                <p><b>Leervaardigheden</b></p><br>
                 <a href="./unityBospad.html"><p>unity Bospad omgeving</p></a>
                 <a href="./blenderKubus.html"><p>Blender kubus camera animatie</p></a>
+            </div>
+        </div>
+    </section>
+
+    <section class="reflectie">
+        <div id="sectieReflectie">
+            <div class="container">
+                <h1>Reflectie</h1><br>
+                <p>Reflectie schrijven: wat heb je hier nou van geleerd? Veel sneller ben ik dingen gaan maken, 
+                    uitproberen, die strategie werkplaats met experts praten. Het heeft me heel veel nieuwe inzichten opgeleverd. 
+                    Wat heb ik geleerd in de manier van werken en wat heeft mij dat opgeleverd.</p>
             </div>
         </div>
     </section>
