--- a/donut.html
+++ b/donut.html
@@ -19,12 +19,15 @@
             </div>
         </div>
         <div class="container">
-            <h2>interview Guy Meel</h2>
-            <p>Ik heb een interview gehouden met het hoofd van de pos productie Guy meel ik heb hier verschillende vragen aan hem gesteld
-                over het gebruik van volumetric video. Ik heb vooral gevraagd naar wat de mogelijkheden waren volgens hem en de limitaties 
-                van volumetric video in film en TV. 
+            <h2>Donut video</h2>
+            <p>Ik ben aan de slag gegaan Blender door middel van een tutorial op het internet, deze tutorial van BlenderGuru 
+                begint vrij gemakkelijk bij de basis, naarmate je verder komt in de tutorials, word het steeds complexer. 
+                Ik heb bijvoorbeeld geleerd: Hoe je gebruik moet maken van geometry nodes, sculpting en contraints. Ook heb ik
+                veel geleerd over de werking van Blender zelf zoals: De render engine, dit maakt het beeld. Eevee is bijvoorbeeld 
+                minder zwaar maar daar word de lichtweerkaatsing nagemaakt en niet echt berekend in tegenstelling tot Cycles die 
+                een stuk zwaarder is voor je computer maar veel mooiere beelden creeërt.  
             </p><br>
-            <p>dit hoort bij deze learning goal Knowledge & Insights.</p><br>
+            <p>Dit hoort bij deze learning goal Knowledge & Insights.</p><br>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/LFUnBLlOEd8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <img src="./IMG/blender donut image.png" width="90%" alt="">
         </div>
