--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                       dat het in productie tijd een verre voorsprong heeft op CGI.<br><br>
                       Ik wilde weten hoe de bewerking van volumetric video in zijn werk ging, 
                       dus heb ik een <a href="#">interview</a> afgelegd met Lisa (4DR Studios) producer om hierover meer te weten te komen.     
-                      Om meer te weten te komen over <a href="#">storyboarden</a> heb ik een literature study gedaan naar verschillende technieken, 
+                      Om meer te weten te komen over <a href="./isFrameForgeGeschikt.html">storyboarden</a> heb ik een literature study gedaan naar verschillende technieken, 
                       ook heb ik gekeken naar potentieel handige programma’s hiervoor en deze met elkaar vergeleken. 
                       In dit onderzoek heb ik ook A/B testen toegepast, doordat ik met een aantal van deze programma’s heb gewerkt
                        en deze op een aantal punten met elkaar heb <a href="#">vergeleken</a>. Ik heb voor dit onderzoek ook een <a href="#">expert</a> geraadpleegd
@@ -142,7 +142,7 @@
 
                     In sprint 2 ben ik na een <a href="#">interview</a> met Swen Rooijakkers overgestapt op Blender, omdat dit beter aansluit bij de scope film en televisie. 
                     Ik wilde meer weten over dit programma dus heb ik <a href="#">literature study</a> gedaan naar Blender. 
-                    Om meer ‘hands on’ kennis te vergaren over Blender heb ik <a href="#">een donut</a> gemaakt in blender, 
+                    Om meer ‘hands on’ kennis te vergaren over Blender heb ik <a href="./donut.html">een donut</a> gemaakt in blender, 
                     hiermee heb ik de basics geleerd zoals: vertices (punten in 3D objecten waar hoeken of lijnen samen komen), 
                     keybindings en geometry nodes.<br><br> 
                     
