--- a/blenderOnderzoek.html
+++ b/blenderOnderzoek.html
@@ -19,13 +19,14 @@
             </div>
         </div>
         <div class="container">
-            <h2>interview Guy Meel</h2>
-            <p>Ik heb een interview gehouden met het hoofd van de pos productie Guy meel ik heb hier verschillende vragen aan hem gesteld
-                over het gebruik van volumetric video. Ik heb vooral gevraagd naar wat de mogelijkheden waren volgens hem en de limitaties 
-                van volumetric video in film en TV. 
+            <h2>Conclusie 3D software</h2><br>
+            <p>Hier heb ik mijn conclusie op de eerste deelvraag: Welke game engine kun je het best gebruiken voor volumetric video?
+                Ik heb een interessante ondervinding gedaan door mijn eerste producten te laten zien aan mijn collega's, die verkondigde 
+                namelijk dat het een goed idee was om af te stappen van een game engine en aan de slag te gaan met een programma genaamd 
+                'Blender'.
             </p><br>
-            <iframe src="./files/GuyMeelInterview.pdf" width="90%" height="900px" frameborder="0"></iframe>
-
+            <p>dit hoort bij deze learning goal: <i>Advise</i></p><br>
+            <iframe src="./files/Blender biebonderzoek.pdf" width="90%" height="900px" frameborder="0"></iframe>
         </div>
      </section>
 </body>
