--- a/guymail.html
+++ b/guymail.html
@@ -19,13 +19,17 @@
             </div>
         </div>
         <div class="container">
-            <h2>interview Guy Meel</h2>
-            <p>Ik heb een interview gehouden met het hoofd van de pos productie Guy meel ik heb hier verschillende vragen aan hem gesteld
-                over het gebruik van volumetric video. Ik heb vooral gevraagd naar wat de mogelijkheden waren volgens hem en de limitaties 
-                van volumetric video in film en TV. 
+            <h2>Mail contact met Guy Meel</h2><br>
+            <p>Ik heb via de mail contact gehad met Guy Meel, hij is veratnwoordelijk voor de post productie
+                van de achtbaan skate scene. Ik heb me eerst over de mail voor gesteld en verteld waar mijn stage
+                overgaat, omdat hij helaas 
+                verhindert was tijdens de opnames. Ik heb meteen in de mails al een aantal vragen gezet 
+                zodat hij een idee had wat ik wilde gaan vragen. Ik heb deze vragen expres redelijk open 
+                gehouden zodat ik op basis van zijn antwoorden door kon vragen.
             </p><br>
-            <iframe src="./files/GuyMeelInterview.pdf" width="90%" height="900px" frameborder="0"></iframe>
-
+         <img src="./IMG/guy mail.png" width="100%" alt="">
+         <img src="./IMG/guy mail extra vragen.png" width="100%" alt="">
+           
         </div>
      </section>
 </body>
