--- a/mailsGertJan.html
+++ b/mailsGertJan.html
@@ -19,13 +19,11 @@
             </div>
         </div>
         <div class="container">
-            <h2>interview Guy Meel</h2>
-            <p>Ik heb een interview gehouden met het hoofd van de pos productie Guy meel ik heb hier verschillende vragen aan hem gesteld
-                over het gebruik van volumetric video. Ik heb vooral gevraagd naar wat de mogelijkheden waren volgens hem en de limitaties 
-                van volumetric video in film en TV. 
+            <h2>Mail contact Gert-Jan Booy</h2><br>
+            <p>Gert-Jan Booy is de regisseur van het programma Gamekeepers en die heb ik een aantal vragen over 
+                de mail gesteld hoe hij te werk ging met storyboarden. 
             </p><br>
-            <iframe src="./files/GuyMeelInterview.pdf" width="90%" height="900px" frameborder="0"></iframe>
-
+            <img src="./IMG/Gert Jan mail.png" width="100%" alt="">
         </div>
      </section>
 </body>
