--- a/volumetricDans.html
+++ b/volumetricDans.html
@@ -19,13 +19,13 @@
             </div>
         </div>
         <div class="container">
-            <h2>interview Guy Meel</h2>
-            <p>Ik heb een interview gehouden met het hoofd van de pos productie Guy meel ik heb hier verschillende vragen aan hem gesteld
-                over het gebruik van volumetric video. Ik heb vooral gevraagd naar wat de mogelijkheden waren volgens hem en de limitaties 
-                van volumetric video in film en TV. 
+            <h2>Volumetric dans</h2><br>
+            <p>Na de eerste dansvideo ben ik verder gegaan met Camera angles te proberen, mijn stage
+                begeleider wilde de camera in een soort spiraal vorm zien draaien om een persoon heen,
+                Ik heb dit gemaakt en door middel van keyframes de camera constant mee laten draaien met 
+                de danseres. 
             </p><br>
-            <iframe src="./files/GuyMeelInterview.pdf" width="90%" height="900px" frameborder="0"></iframe>
-
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/FGBK5ASPUx8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>           
         </div>
      </section>
 </body>
