--- a/studioSchaal.html
+++ b/studioSchaal.html
@@ -19,13 +19,15 @@
             </div>
         </div>
         <div class="container">
-            <h2>interview Guy Meel</h2>
-            <p>Ik heb een interview gehouden met het hoofd van de pos productie Guy meel ik heb hier verschillende vragen aan hem gesteld
-                over het gebruik van volumetric video. Ik heb vooral gevraagd naar wat de mogelijkheden waren volgens hem en de limitaties 
-                van volumetric video in film en TV. 
+            <h2>Studio op schaal</h2><br>
+            <p>Ik heb nadat ik bezig was geweest met de testscene in FrameForge heb gemaakt
+                naar Lisa gegaan voor feedback hierop, de feedback was erg positief en de 
+                vervolg vraag was of ik de plattegrond van de studio kon verwerken in FrameForge.
+                Zodat ze de bewegingen die de acteurs moeten maken goed in beeld kunnen brengen.
+                Een voordeel hiervan is dat je aan de acteurs kunt laten zien hoeveel ruimte
+                je nou hebt in de studio, je hebt immers een straal 1,5 meter om op te nemen.
             </p><br>
-            <iframe src="./files/GuyMeelInterview.pdf" width="90%" height="900px" frameborder="0"></iframe>
-
+         <img id="fotoSchaal" src="./IMG/studioOpSchaal.png" alt="">           
         </div>
      </section>
 </body>
