--- a/index.html
+++ b/index.html
@@ -196,8 +196,16 @@
             <p>
                 In deze fase heb ik mijn onderzoek getoetst in de praktijk door het process volledig te doorlopen. Ik wilde 
                 een video maken waarin volumetric video het best tot zijn recht kwam, dus heb ik eerst een <a href="#">interview</a> gehouden
-                met Lisa Guerts (producer 4DR Studios). Hieruit is gekomen dat ik in de scene vooral moet..... . Ik wilde precies weten
-                wat er voor mijn filmpje aan voorbereiding moest gebeuren, dus heb ik een <a href="#">requirements lijst</a> opgesteld.
+                met Lisa Guerts (producer 4DR Studios) en Natasja Paulssen (Creative director, Founder). Hieruit is gekomen dat ik in de scene vooral moet..... . Ik wilde precies weten
+                wat er voor mijn filmpje aan voorbereiding moest gebeuren, dus heb ik een <a href="#">requirements lijst</a> opgesteld. Daarna heb ik 
+                <a href="#">papieren schetsen</a> gemaakt. Op basis van deze schetsen ben ik gaan werken aan een <a href="#">3D storyboard</a> in FrameForge.
+                Daarna heb ik een alembic gebruikt/gemaakt even kijken wat mogelijk is.... en deze in blender in een 3D omgeving geplaatst.
+
+                <b>Conclusie:</b> Ik heb het hele process doorlopen om aan te tonen dat deze strategie goed werkt, en dat is zo gebleken.
+                Wat ik wel fijn vond en wat mij was aangeraden bij Dutch Rose Media was om te beginnen met papieren schetsen zo kon ik daar vanuit 
+                verder werken, ook vond ik dat FrameForge echt een meerwaarde was, omdat ik zo gedetaileerd kon laten zien wat ik in gedachte had 
+                voor de scene. Blender werkte ook naar behoren de camera trails werkte vrijwel direct nadat ik hiermee had gewerkt in mijn eerdere
+                Proof of Concepts. Verder heb ik na mijn interview met Lisa en Natasja gebruik gemaakt in Blender van volumetric rook.
             </p>
         </div>
     </div>
@@ -248,9 +256,29 @@
         <div id="sectieReflectie">
             <div class="container">
                 <h1>Reflectie</h1><br>
-                <p>Reflectie schrijven: wat heb je hier nou van geleerd? Veel sneller ben ik dingen gaan maken, 
-                    uitproberen, die strategie werkplaats met experts praten. Het heeft me heel veel nieuwe inzichten opgeleverd. 
-                    Wat heb ik geleerd in de manier van werken en wat heeft mij dat opgeleverd.</p>
+                <p>Ik ben Veel sneller dingen gaan maken en uitproberen, ik ben meteen aan de slag gegaan met netwerken 
+                    zodat ik wist welke experts ik kon benaderen. Dit heeft mij tot een aantal inzichten geleid die ik met 
+                    alleen een literature study niet had kunnen weten. Daarnaast ben ik ook zelf een stuk actiever naar 
+                    validatie opzoek gegaan door mijn werk en ideeën te presenteren aan experts. Ik had voor mezelf in mijn project proposal 
+                    drie leerdoelen opgesteld namelijk: <br><br>
+                    <ul>
+                        <li>3D augmented reality concepting</li>
+                        <li>Unity</li>
+                        <li>3D user experience</li>
+                    </ul><br>
+                    Ik heb 3D concepting heel goed onderzocht en zoals ik net aangaf hiervoor ook experts geraadpleegd en Poof of concepts 
+                    bij hun gevalideerd. Ik heb Unity ook goed onderzocht en hierin een aantal producten gemaakt en ook deze weer laten 
+                    valideren bij experts, echter bleek Unity alleen niet genoeg om een goed onderzoek te maken daarom heb ik ook nog 
+                    onderzoek gedaan naar Unreal en heb ik Blender gebruikt om Proof of Concepts te gebruiken. 3D user experience bleek 
+                    niet toepaselijk te zijn in de sector film en televsie, omdat er geen interactie is met de gebruiker. Ik merkte 
+                    tijdens mijn stage dat de geringe kennis die ik had over het onderwerp van te voren ervoor zorgde dat ik bepaalde assumpties heb gemaakt 
+                    die achteraf klopten, bijvoorbeeld dat Game Engines de enige optie waren omtrent het maken van omgevingen voor scènes.
+                    achteraf bleek het tegendeel waar te zijn en ben ik tot de conclusie gekomen dat Game engines helemaal niet handig waren
+                    voor deze doeleinde.<br>
+                    In het kort heb ik een veel onderzoekendere houding aangenomen en zelf interviews met meerdere experts gehouden en heb ik hun 
+                    benodigdheden meegenomen in mijn conclusie. Ik heb twee van de drie eigen leerdoelen aangetoond en het leerdoel unity zelfs nog een stuk uitgebreider 
+                    gemaakt dan ik initieel de bedoeling was.
+                </p>
             </div>
         </div>
     </section>
