--- a/index.html
+++ b/index.html
@@ -196,17 +196,21 @@
             <p>
                 In deze fase heb ik mijn onderzoek getoetst in de praktijk door het process volledig te doorlopen. Ik wilde 
                 een video maken waarin volumetric video het best tot zijn recht kwam, dus heb ik eerst een <a href="#">interview</a> gehouden
-                met Lisa Guerts (producer 4DR Studios) en Natasja Paulssen (Creative director, Founder). Hieruit is gekomen dat ik in de scene vooral moet..... . Ik wilde precies weten
-                wat er voor mijn filmpje aan voorbereiding moest gebeuren, dus heb ik een <a href="#">requirements lijst</a> opgesteld. Daarna heb ik 
-                <a href="#">papieren schetsen</a> gemaakt. Op basis van deze schetsen ben ik gaan werken aan een <a href="#">3D storyboard</a> in FrameForge.
-                Daarna heb ik een alembic gebruikt/gemaakt even kijken wat mogelijk is.... en deze in blender in een 3D omgeving geplaatst.
-
+                met Lisa Guerts (producer 4DR Studios) en Natasja Paulssen (Creative director, Founder). Hieruit is gekomen dat ik in de scene een video moet 
+                maken waarin ik een actualiteit pak en daar een video met een soort gelijke gebeurtenis uit het verleden gebruik als omgeving. 
+                Ik wilde precies weten wat er voor mijn filmpje aan voorbereiding moest gebeuren, dus heb ik een <a href="#">requirements lijst</a> opgesteld. Daarna heb ik 
+                <a href="#">papieren schetsen</a> gemaakt, ook heb ik een <a href="#">script</a> geschreven. Op basis van deze schetsen ben ik gaan werken aan een <a href="#">3D storyboard</a> in FrameForge.
+                Daarna heb ik een alembic gebruikt/gemaakt even kijken wat mogelijk is.... en deze in blender in een oude omgeving geplaatst. Uit het interview met 
+                Natasja is gebleken dat je met regen imperfecties in het 3D model goed kunt verbergen dus deze heb ik er ook nog aan toegevoegd.
+                <br><br>
                 <b>Conclusie:</b> Ik heb het hele process doorlopen om aan te tonen dat deze strategie goed werkt, en dat is zo gebleken.
-                Wat ik wel fijn vond en wat mij was aangeraden bij Dutch Rose Media was om te beginnen met papieren schetsen zo kon ik daar vanuit 
+                Wat ik wel fijn vond en wat mij was aangeraden bij Dutch Rose Media was om te beginnen met papieren schetsen en een script zo kon ik vanuit daar
                 verder werken, ook vond ik dat FrameForge echt een meerwaarde was, omdat ik zo gedetaileerd kon laten zien wat ik in gedachte had 
                 voor de scene. Blender werkte ook naar behoren de camera trails werkte vrijwel direct nadat ik hiermee had gewerkt in mijn eerdere
-                Proof of Concepts. Verder heb ik na mijn interview met Lisa en Natasja gebruik gemaakt in Blender van volumetric rook.
-            </p>
+                Proof of Concepts. 
+            </p><br>
+            <h2>Advies</h2>
+            <p></p>
         </div>
     </div>
     </section>
@@ -224,11 +228,14 @@
                  <a href="./interviewGuy.html"><p>interview met Guy Meel over Gamekeepers scene</p></a>
                  <a href="./interviewGertJan.html"><p>interview met Gert Jan Booy over storyboarding</p></a>
                  <a href="./blenderOnderzoek.html">Blender onderzoek</a>
+                 <a href="#">Interview Lisa</a>
+                 <a href="#">Interview Natasja</a>
                 <p><b>Advies</b></p><br>
                  <a href="./conclusieStoryboarding.html"><p>conclusie storyboarding</p></a>
                  <a href="./conclusiePostproductie.html"><p>conclusie beste software post productie...</p></a><br>
                 <p><b>Design</b></p><br>
-                 <p>requirements voor het maken van een video</p><br>
+                 <a href="#">Requirements lijst</a>
+                 <a href="#">Script</a>
                 <p><b>Realisatie</b></p><br>
                  <a href="./unityBospad.html"><p>unity Bospad omgeving</p></a>
                  <a href="./ironManScene.html"><p>unity flying animation</p></a>
@@ -275,8 +282,8 @@
                     die achteraf klopten, bijvoorbeeld dat Game Engines de enige optie waren omtrent het maken van omgevingen voor scènes.
                     achteraf bleek het tegendeel waar te zijn en ben ik tot de conclusie gekomen dat Game engines helemaal niet handig waren
                     voor deze doeleinde.<br>
-                    In het kort heb ik een veel onderzoekendere houding aangenomen en zelf interviews met meerdere experts gehouden en heb ik hun 
-                    benodigdheden meegenomen in mijn conclusie. Ik heb twee van de drie eigen leerdoelen aangetoond en het leerdoel unity zelfs nog een stuk uitgebreider 
+                    In het kort heb ik een veel onderzoekendere houding aangenomen en zelf interviews ingepland met meerdere experts en heb ik hun 
+                    eisen en inzichten meegenomen in mijn conclusie. Ik heb twee van de drie eigen leerdoelen aangetoond en het leerdoel unity zelfs nog een stuk uitgebreider 
                     gemaakt dan ik initieel de bedoeling was.
                 </p>
             </div>
