--- a/index.html
+++ b/index.html
@@ -197,10 +197,11 @@
                 In deze fase heb ik mijn onderzoek getoetst in de praktijk door het process volledig te doorlopen. Ik wilde 
                 een video maken waarin volumetric video het best tot zijn recht kwam, dus heb ik eerst een <a href="#">interview</a> gehouden
                 met Lisa Guerts (producer 4DR Studios) en Natasja Paulssen (Creative director, Founder). Hieruit is gekomen dat ik in de scene een video moet 
-                maken waarin ik een actualiteit pak en daar een video met een soort gelijke gebeurtenis uit het verleden gebruik als omgeving. 
+                maken waarin ik een actualiteit pak en daar een video met een soort gelijke gebeurtenis uit het verleden gebruik als omgeving. Hiervoor 
+                moest ik gebruik maken van motion tracking, om deze techniek te leren heb ik een <a href="#">test filmpje</a> gemaakt 
                 Ik wilde precies weten wat er voor mijn filmpje aan voorbereiding moest gebeuren, dus heb ik een <a href="#">requirements lijst</a> opgesteld. Daarna heb ik 
                 <a href="#">papieren schetsen</a> gemaakt, ook heb ik een <a href="#">script</a> geschreven. Op basis van deze schetsen ben ik gaan werken aan een <a href="#">3D storyboard</a> in FrameForge.
-                Daarna heb ik een alembic gebruikt/gemaakt even kijken wat mogelijk is.... en deze in blender in een oude omgeving geplaatst. Uit het interview met 
+                Daarna heb ik een alembic gebruikt/gemaakt even kijken wat mogelijk is.... en deze in blender in een video geplaatst geplaatst. Uit het interview met 
                 Natasja is gebleken dat je met regen imperfecties in het 3D model goed kunt verbergen dus deze heb ik er ook nog aan toegevoegd.
                 <br><br>
                 <b>Conclusie:</b> Ik heb het hele process doorlopen om aan te tonen dat deze strategie goed werkt, en dat is zo gebleken.
@@ -214,7 +215,7 @@
         </div>
     </div>
     </section>
-
+ 
     <section class="producten">
         <div id="productensctn">
             <div class="container">
@@ -240,7 +241,8 @@
                  <a href="./unityBospad.html"><p>unity Bospad omgeving</p></a>
                  <a href="./ironManScene.html"><p>unity flying animation</p></a>
                  <a href="./blenderKubus.html"><p>Blender kubus camera animatie</p></a>
-                 <a href="./blenderanimatie.html"><p>Blender Volumetric dans camera animatie</p></a><br>
+                 <a href="./blenderanimatie.html"><p>Blender Volumetric dans camera animatie</p></a>
+                 <a href="#"><p>Blender Motion tracking</p></a><br>
                 
                 <p><b>Management & controle</b></p><br>
                  <a href="./projectplan.html">projectplan</a>
