--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
          Dit bedrijf heeft een volumetric studio, dit is een green screen studio met een kooi van camera’s
           die een performance van een acteur om kan zetten in volumetric video. Het resultaat zijn 3D hologrammen, 
           beelden die je van alle kanten kunt bekijken en omheen kunt lopen. Ze hebben veel grote klanten waar ze 
-          dit soort projecten voor maken zoals:<br>
+          dit soort projecten voor maken zoals:<br><br>
           <ul>
             <li>PSV (Entertainment)</li>
             <li>Veilig verkeer nederland (Educatief)</li>
@@ -98,7 +98,7 @@
             </section>
             <section class="fase1"> 
                 <div id="faseEen">
-                <div class="containerBlue"> 
+                <div class="containerBlueFase1"> 
                 <h2>Fase 1</h2><br>
                 <p>Ik heb diverse gesprekken met mijn collega's bij Dutch Rose Media gevoerd om een beter idee van hun expertise te krijgen. 
                     Hierdoor had ik gelijk in het begin al een goed beeld van wie ik kon benaderen voor verschillende vragen over verschillende onderwerpen.
@@ -118,8 +118,9 @@
                         dit heb ik meegenomen in mijn uiteindelijke <a href="./conclusieStoryboarding.html">conclusie</a> van het onderzoek, 
                         ook heeft hij mij verteld welk programma hij nu hiervoor heeft gebruikt dit programma heb ik ook onderzocht en 
                         vergeleken met de andere.<br><br>
-                        <p><b>Cunclusie sprint 1:</b> Het is echt belangrijk om een storyboard te maken, dit omdat het erg duur is om volumetric video op 
-                        te nemen in de studio en het dus scheelt als er zo min mogelijk opnieuw gedaan moet worden. Wat belangrijk is voor de regisseur 
+                        <p><b>Cunclusie sprint 1:</b> Het is erg duur is om volumetric video op 
+                        te nemen in de studio en het dus scheelt als er zo min mogelijk opnieuw gedaan moet worden, daarom is het belangrijk dat alles
+                        van te voren voor het team duidelijk is. Wat belangrijk is voor de regisseur 
                         dat de storyboards snel en duidelijk gemaakt kunnen worden, ik heb een eental programma's onderzocht en in de volgende sprint 
                         ga ik een test scené met een van deze programma's.</p><br>
                         
@@ -247,8 +248,8 @@
                 <p><b>Management & controle</b></p><br>
                  <a href="./projectplan.html">projectplan</a>
                 <br><br>
-                <p><b>Beoordeelsvorming</b></p><br>
-
+                <p><b>Oordeelsvorming</b></p><br>
+                <a href="./oordeelsvorming.html">Oordeelsvorming</a>
 
                 <p><b>Communicatie</b></p><br>
                 <a href="./guymail.html">Mail contact Guy Meel</a><br>
