--- a/conclusiePostproductie.html
+++ b/conclusiePostproductie.html
@@ -23,10 +23,11 @@
             <p>Hier heb ik mijn conclusie op de eerste deelvraag: Welke game engine kun je het best gebruiken voor volumetric video?
                 Ik heb een interessante ondervinding gedaan door mijn eerste producten te laten zien aan mijn collega's, die verkondigde 
                 namelijk dat het een goed idee was om af te stappen van een game engine en aan de slag te gaan met een programma genaamd 
-                'Blender'.
+                'Blender'. Daarom heb ik de deelvraag veranderd naar: welke software kun je het best gebruiken voor de post productie van
+                volumetric video. 
             </p><br>
             <p>dit hoort bij deze learning goal: <i>Advise</i></p><br>
-            <iframe src="./files/postproductiesoftware.pdf" width="90%" height="900px" frameborder="0"></iframe>
+            <iframe src="./files/postproductiesoftware1.pdf" width="90%" height="900px" frameborder="0"></iframe>
         </div>
      </section>
 </body>
